--- a/test-app/app/templates/index.hbs
+++ b/test-app/app/templates/index.hbs
@@ -1,5 +1,5 @@
 {{!-- <DocsHero/> --}}
-<div style="height: 30%">
+<div>
 
 <DocsHero
   @prefix="Ember"
@@ -8,7 +8,7 @@
   class="some-custom-class"/>
   </div>
   
-<div style="max-width: 40rem; margin: 0 auto; padding: 0 1.5rem">
+<div>
   <DocsDemo as |demo|>
     <demo.example @name="my-demo.hbs">
       <p>This is a very minimal dropdown. That means that it is agnostic about what it is going to contain.
