--- a/addon-v2/src/components/list.hbs
+++ b/addon-v2/src/components/list.hbs
@@ -1,12 +1,10 @@
 {{yield}}
- {{!-- <FromElsewhere @name="list" as |timer|>
-<div>{{timer}}</div>
-</FromElsewhere> --}}
 
-<Search @changebysearch={{this.changebysearch}} @setChildReference={{action 'setChildReference'}} @availablechoices={{this.datatable.data}} @keyvalues={{this.keyvalues}}/>
+
+<Search @changebysearch={{this.changebysearch}} @setChildReference={{this.setChildReference}} @availablechoices={{this.datatable.data}} @keyvalues={{this.keyvalues}}/>
 
 {{#if this.popup}}
-  <Edit @closepopup={{action this.closepopup}} @head={{this.datatable.data}} @editid={{this.editid}}/>
+  <Edit @closepopup={{this.closepopup}} @head={{this.datatable.data}} @editid={{this.editid}}/>
 {{/if}}
 {{!-- @searchEnabled={{true}} --}}
 <br>
@@ -30,17 +28,16 @@
                 <div class="header-content">
                 <span class="header-text">{{item-val.name}}</span>
                 <div class="sort-button">
-                <button onclick={{action this.sorting item-val.name true}} type="button"  >/\</button><br>
-                <button onclick={{action this.sorting item-val.name false}} type="button" >\/</button>
-
+                <button {{on "click" (fn this.sorting item-val.name true)}} type="button">/\</button><br>
+                <button {{on "click" (fn this.sorting item-val.name false)}} type="button">\/</button>
                 </div>
                 </div>
                </th>  
            {{/if}} 
       {{/each-in}}
 
-      <th>  <button onclick={{action this.delete}} type="button" >Delete</button>
-          <button onclick={{this.edit}} type="button" >Edit</button>    </th>
+      <th>  <button {{on "click" this.delete}} type="button" >Delete</button>
+          <button {{on "click" this.edit}} type="button" >Edit</button>    </th>
 
      </tr>
     
@@ -63,7 +60,9 @@
       {{/each-in}} 
 
   <td>
-   {{input type="checkbox" checked=item.setting.ischecked onchange=(action "togglecheckbox" item)}}
+        <label>
+          <input type="checkbox" checked={{item.setting.ischecked}} {{on "change" (fn this.togglecheckbox item)}}>
+        </label>
     </td>
 
     </tr>
@@ -71,13 +70,12 @@
 {{/each}}
 
 <br>
-{{!-- {{input type="text" value=this.limit label="Page Size:" onchange=(action this.changelimit)}} --}}
-<label for="limit">Page size :</label>
-<input type="text" {{on "input" (action this.changelimit)}} value={{this.limit}}>
-
-<button onclick={{this.previouspage}} type = "button">previous</button>
+<label>Page size :
+<input type="text" {{on "input" this.changelimit}} value={{this.limit}}>
+</label>
+<button {{on "click" this.previouspage}}  type = "button">previous</button>
 {{this.pageno}}
-<button onclick={{this.nextpage}} type="button">next</button>
+<button {{on "click" this.nextpage}} type="button">next</button>
 
 
 {{#if this.loadingfetch}}
@@ -93,3 +91,7 @@
 </div>
 {{/if}}
 
+
+
+
+   
